tests/ui/macros/issue-69396-const-no-type-in-macro.stderr
error[E0428]: the name `A` is defined multiple times
  --> $DIR/issue-69396-const-no-type-in-macro.rs:4:13
   |
LL | / macro_rules! suite {
LL | |     ( $( $fn:ident; )* ) => {
LL | |         $(
LL | |             const A = "A".$fn();
   | |             ^^^^^^^^^^^^^^^^^^^^ `A` redefined here
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `suite!`
LL |
LL | / suite! {
LL | |     len;
LL | |     is_empty;
LL | | }
   | |_- in this macro invocation
   |
   = note: `A` must be defined only once in the value namespace of this module

error: missing type for `const` item
  --> $DIR/issue-69396-const-no-type-in-macro.rs:4:20
   |
LL | / macro_rules! suite {
LL | |     ( $( $fn:ident; )* ) => {
LL | |         $(
LL | |             const A = "A".$fn();
   | |                    ^ help: provide a type for the constant: `: usize`
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `suite!`
LL |
LL | / suite! {
LL | |     len;
LL | |     is_empty;
LL | | }
   | |_- in this macro invocation

error[E0121]: the placeholder `_` is not allowed within types on item signatures for constants
  --> $DIR/issue-69396-const-no-type-in-macro.rs:4:20
   |
LL | / macro_rules! suite {
LL | |     ( $( $fn:ident; )* ) => {
LL | |         $(
LL | |             const A = "A".$fn();
   | |                    ^
   | |                    |
   | |                    not allowed in type signatures
   | |                    help: replace with the correct type: `bool`
...  |
LL | |     }
LL | | }
   | |_- in this expansion of `suite!`
LL |
LL | / suite! {
LL | |     len;
LL | |     is_empty;
LL | | }
   | |_- in this macro invocation

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0121, E0428.
For more information about an error, try `rustc --explain E0121`.
